<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hz.bluetoothstation.MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/constraintLayout"
    >

    <LinearLayout
        android:id="@+id/ll_bar"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/mainToolbar"
        android:orientation="vertical"
        android:background="@color/colorToolbar"
        android:visibility="gone"
        >
    </LinearLayout>
    <android.support.v7.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorToolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_bar"
        app:layout_constraintHorizontal_bias="0.0"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:theme="@style/mainToolbar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:onClick="onClick_intent"
                android:id="@+id/imageIntent"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:scaleType="centerCrop"
                android:src="@drawable/notconnect"

                >
                <!--android:layout_alignTop="@+id/textView_device"-->
                <!--android:layout_alignParentStart="true"-->
            </ImageView>
            <TextView
                android:layout_gravity="center"
                android:onClick="onClick_intent"
                android:id="@+id/textView_device"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:text="@string/device提示"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:typeface="monospace"

                />
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_toEndOf="@+id/image1"-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end">
                <android.support.v7.widget.SwitchCompat

                    app:trackTint="@color/colorAccent"
                    android:id="@+id/switchReceive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/接收switch"
                    android:layout_gravity="center"

                    />
            </LinearLayout>

            <!--android:layout_alignParentEnd="true"-->
            <!--android:layout_centerVertical="true"-->
        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView_sendValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value区域提示"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline5"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.509" />
    <TextView
        android:id="@+id/textView_sendName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name区域提示"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="41dp"
        app:layout_constraintTop_toBottomOf="@+id/textView_sendValue"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline5"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />
    <!--<ScrollView-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="0dp"-->
        <!--app:layout_constraintLeft_toLeftOf="@+id/guideline5"-->
        <!--app:layout_constraintRight_toRightOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/mainToolbar"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/editTextSend"-->
        <!--android:scrollbars="vertical">-->
        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@drawable/textviewbackground"-->
            <!--android:text="@string/接收区提示"-->
            <!--android:textSize="12sp"-->
            <!--/>-->
    <!--</ScrollView>-->
    <TextView

        android:fadeScrollbars="false"
        android:scrollbars="vertical"
        android:background="@drawable/textviewbackground"
        android:id="@+id/textViewReceive"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/接收区提示"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolbar"
        app:layout_constraintBottom_toTopOf="@+id/editTextSend" />
    <EditText
        android:selectAllOnFocus="true"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        android:imeOptions="actionDone"
        android:hint="@string/EditTextHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        android:id="@+id/editTextSend"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/guideline5"
        app:layout_constraintRight_toLeftOf="@+id/imageSend"
        android:layout_marginBottom="3dp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/send"
        android:id="@+id/imageSend"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintLeft_toRightOf="@+id/editTextSend"
        android:layout_marginBottom="7dp" />

    <ImageView
        android:id="@+id/up"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/up"
        android:layout_marginLeft="87dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.486"
        android:layout_marginStart="87dp" />
    <ImageView
        android:id="@+id/down"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/down"
        android:layout_marginLeft="87dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.492"
        android:layout_marginStart="87dp" />
    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:id="@+id/left"
        android:src="@drawable/left"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.568"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />
    <ImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:id="@+id/right"
        android:src="@drawable/right"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.568"
        app:layout_constraintLeft_toRightOf="@+id/left"
        android:layout_marginLeft="99dp"
        android:layout_marginStart="99dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.54"
        tools:layout_editor_absoluteY="306dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7707231"
        tools:layout_editor_absoluteY="437dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="92dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="92dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31"
        tools:layout_editor_absoluteY="176dp"
        tools:layout_editor_absoluteX="0dp" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/right"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:id="@+id/linearLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:text="01"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:onClick="onClick"
                android:id="@+id/button01"
                android:background="@drawable/btn_login"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="11dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"/>

            <Button
                android:text="02"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:onClick="onClick"
                android:id="@+id/button02"
                android:background="@drawable/btn_login"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="11dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:text="03"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:onClick="onClick"
                android:id="@+id/button03"
                android:background="@drawable/btn_login"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="11dp"
                android:layout_marginEnd="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <Button
                android:text="04"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:onClick="onClick"
                android:id="@+id/button04"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="11dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/btn_login" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:text="05"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:onClick="onClick"
                android:id="@+id/button05"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="11dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/btn_login" />

            <Button
                android:text="06"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:onClick="onClick"
                android:id="@+id/button06"
                android:background="@drawable/btn_login"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="11dp"
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>



    </LinearLayout>

    <ToggleButton
        android:textColor="@android:color/white"
        android:background="@color/colorButton"
        android:textOn="十六进制"
        android:textOff="字符"
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="@+id/guideline5"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>
